
  ChangeLog for the spinning_mcmc repository.  
  Please log (major) changes here (and add a short comment using svn commit -m 'Comment').

   134: sluys, 20/02/2009
     - implemented part of the functionality of the mcmc.parameters input file
       - prior routines are now waveform-independent, much smaller and moved back 
         to mcmc_mcmc.c	
       - I removed mcmc_prior.c, because it was empty
       - prior information can be set in the mcmc.parameters input file
     
   133: sluys, 20/02/2009
     - finished injection routines; software injections can be done 
       using mcmc.injection, either using the values specified, or
       using random values (from Gaussian or uniform distributions)
   
   132: sluys, 20/02/2009
     - moved offset chain info from mcmc.mcmc to mcmc.parameters; 
       the format of both files was changed
     
   131: sluys, 20/02/2009
     - new input file mcmc.injection (see doc/)
     - injection data removed from mcmc.input
     - format of mcmc.mcmc changed
   
   126: sluys, 18/02/2009
     - global variable npar was replaced by nMCMCpar and nInjectPar,
       in the structs runpar and mcmcvariables
     
   123: sluys, 18/02/2009
     - new version of input file mcmc.mcmc needed (see doc/)
     
   121: sluys, 18/02/2009
     - new version of input file mcmc.parameters needed (see doc/)
   
   118: sluys, 13/02/2009
     - new input file mcmc.parameters (see doc/):
       - contains data on how to treat MCMC parameters
       - file read, but data not yet used
     - tukeywin now read from mcmc.data
   
   114: sluys, 06/02/2009
     - input files changed, see in doc/: mcmc.input, mcmc.mcmc, mcmc.data
     - created new input file mcmc.mcmc with all data on how to do mcmc
     - moved most data from mcmc.input to mcmc.mcmc and mcmc.data
     
   111: sluys, 05/02/2009
     - input file mcmc.data changed, see doc/mcmc.data_NINJA_noise